// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading component sanity matches default snapshot 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 24px;
  font-weight: 600;
  line-height: 1.25;
}

<h3
  class="c0"
  font-family="sansSerif"
  font-size="4"
  font-weight="3"
/>
`;

exports[`Heading component sanity matches themed snapshot 1`] = `
.c1 {
  margin: 0;
  padding: 0;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 24px;
  font-weight: 600;
  line-height: 1.25;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <h3
    class="c1"
    font-family="sansSerif"
    font-size="4"
    font-weight="3"
  />
</div>
`;
